Fix layout issues.

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -4,6 +4,9 @@
 body 
   margin-bottom: 60px;
 
+body > .container
+    padding-top: 60px
+
 .footer
   position: absolute;
   bottom: 0;
